syntax = "proto3";

package customers;

option go_package = "github.com/relby/diva.back/pkg/genproto";

message Customer {
    uint64 id = 1;
    string full_name = 2;
    string phone_number = 3;
    uint32 discount = 4;
}

message GetCustomersRequest {
    optional string full_name = 1;
    optional string phone_number = 2;
}

message GetCustomersResponse {
    repeated Customer customers = 1;
}

message UpdateCustomerRequest {
    uint64 id = 1;
    optional string full_name = 2;
    optional string phone_number = 3;
    optional uint32 discount = 4;
}

message UpdateCustomerResponse {
    Customer customer = 1;
}

message AddCustomerRequest {
    string full_name = 1;
    string phone_number = 2;
    uint32 discount = 3;
}

message AddCustomerResponse {
    Customer customer = 1;
}

message DeleteCustomerRequest {
    uint64 id = 1;
}

message DeleteCustomerResponse {
    Customer customer = 1;
}

message ExportCustomersToExcelRequest {}

message ExportCustomersToExcelResponse {
    bytes data = 1;
}

service CustomersService {
    rpc ListCustomers(GetCustomersRequest) returns (GetCustomersResponse);
    rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
    rpc AddCustomer(AddCustomerRequest) returns (AddCustomerResponse);
    rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
    rpc ExportCustomersToExcel(ExportCustomersToExcelRequest) returns (ExportCustomersToExcelResponse);
}